--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index"
+    "start": "node server/index",
+    "dev": "nodemon server/index"
   },
   "author": "",
   "license": "ISC",
